syntax = "proto3";

option go_package="GoldenCity/gin;GoldenCitygin";

import "base.proto";

// 游戏详情请求
message TGoldenCityRecordDetailReq
{
    string      token     = 1;  
    string      orderid   = 2;  // 订单号
}

message Result {
    repeated TResult freearray = 1;
}

// 游戏详情返回
message TGoldenCityRecordDetailRsp
{
    int64                           balance         = 1;  // 余额
    repeated TResult                normalresult    = 2;  //normal旋转记录集
    int64                           bet             = 3;  //下注金额
    int32                           freetimes       = 5;  //总的免费次数
    repeated Result                 freeresult      = 6;  //free旋转记录集，如果有的话，没有就是空
    int64                           wintotal        = 7;  //一次旋转到不能再消除后，赢得总金额，含所有免费赢得
    string                          orderid         = 8;  //订单ID
    int32                           betsize         = 9;  //投注大小
    int32                           betmultiple     = 10;  //投注倍数
}